[gd_scene load_steps=4 format=3 uid="uid://bip4d4d6kwh5j"]

[ext_resource type="Script" path="res://scripts/light_controller.gd" id="1_ngekc"]

[sub_resource type="Curve3D" id="Curve3D_8ama4"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -1.70734, 0.211664, -0.00928807, 0, 0, 0, 0, 0, 0, -1.96693, 0.468038, -0.0284531, 0, 0, 0, 0, 0, 0, -2.04629, 0.751113, -0.0664659, 0, 0, 0, 0, 0, 0, -2.02664, 1.03997, -0.113435, 0, 0, 0, 0, 0, 0, -1.9559, 1.22734, -0.118562, 0, 0, 0, 0, 0, 0, -1.81762, 1.38432, -0.131717, 0, 0, 0, 0, 0, 0, -1.67948, 1.46281, -0.146033, 0, 0, 0, 0, 0, 0, -1.51138, 1.50507, -0.164248, 0, 0, 0, 0, 0, 0, -1.33133, 1.52319, -0.184166, 0, 0, 0, 0, 0, 0, -1.16331, 1.52319, -0.203006, 0, 0, 0, 0, 0, 0, -0.935359, 1.47488, -0.229288, 0, 0, 0, 0, 0, 0, -0.809492, 1.38432, -0.244757, 0, 0, 0, 0, 0, 0, -0.707719, 1.23941, -0.258337, 0, 0, 0, 0, 0, 0, -0.665984, 1.07639, -0.265456, 0, 0, 0, 0, 0, 0, -0.612247, 0.913375, -0.273921, 0, 0, 0, 0, 0, 0, -0.540527, 0.738281, -0.284583, 0, 0, 0, 0, 0, 0, -0.366725, 0.605451, -0.306059, 0, 0, 0, 0, 0, 0, -0.180841, 0.520923, -0.328167, 0, 0, 0, 0, 0, 0, 0.0890942, 0.460546, -0.359338, 0, 0, 0, 0, 0, 0, 0.341247, 0.532998, -0.386527, 0, 0, 0, 0, 0, 0, 0.569577, 0.71413, -0.409418, 0, 0, 0, 0, 0, 0, 0.599921, 0.919412, -0.409748, 0, 0, 0, 0, 0, 0, 0.558376, 1.19715, -0.400933, 0, 0, 0, 0, 0, 0, 0.408746, 1.43262, -0.380631, 0, 0, 0, 0, 0, 0, 0.132741, 1.45073, -0.349411, 0, 0, 0, 0, 0, 0, -0.137515, 1.3179, -0.321096, 0, 0, 0, 0, 0, 0, -0.497952, 1.08243, -0.284204, 0, 0, 0, 0, 0, 0, -0.702228, 0.931487, -0.263558, 0, 0, 0, 0, 0, 0, -0.888482, 0.79262, -0.244751, 0, 0, 0, 0, 0, 0, -1.10474, 0.653752, -0.222581, 0, 0, 0, 0, 0, 0, -1.33912, 0.442432, -0.199463, 0, 0, 0, 0, 0, 0, -1.59145, 0.261301, -0.17388, 0, 0, 0, 0, 0, 0, -1.70734, 0.211664, -0.00928807),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 33

[sub_resource type="Curve3D" id="Curve3D_bovt8"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 4.04916, 0.176358, 2.20585, 0, 0, 0, 0, 0, 0, 4.20484, 0.338946, 2.15945, 0, 0, 0, 0, 0, 0, 4.3209, 0.5113, 2.11881, 0, 0, 0, 0, 0, 0, 4.27038, 0.738389, 2.10076, 0, 0, 0, 0, 0, 0, 4.15102, 0.960844, 2.09527, 0, 0, 0, 0, 0, 0, 3.81037, 1.21574, 2.12455, 0, 0, 0, 0, 0, 0, 3.36513, 1.41502, 2.17866, 0, 0, 0, 0, 0, 0, 3.15341, 1.42893, 2.21396, 0, 0, 0, 0, 0, 0, 2.91459, 1.41966, 2.25673, 0, 0, 0, 0, 0, 0, 2.64563, 1.30843, 2.31682, 0, 0, 0, 0, 0, 0, 2.42988, 1.29453, 2.35611, 0, 0, 0, 0, 0, 0, 2.24416, 1.38722, 2.37755, 0, 0, 0, 0, 0, 0, 2.02911, 1.56796, 2.39369, 0, 0, 0, 0, 0, 0, 1.84395, 1.63284, 2.41832, 0, 0, 0, 0, 0, 0, 1.54068, 1.62821, 2.47178, 0, 0, 0, 0, 0, 0, 1.35033, 1.49381, 2.5209, 0, 0, 0, 0, 0, 0, 1.326, 1.3316, 2.54434, 0, 0, 0, 0, 0, 0, 1.38417, 0.951576, 2.57915, 0, 0, 0, 0, 0, 0, 1.50066, 0.87279, 2.56814, 0, 0, 0, 0, 0, 0, 1.64371, 0.844983, 2.54647, 0, 0, 0, 0, 0, 0, 1.93532, 0.743025, 2.50765, 0, 0, 0, 0, 0, 0, 2.16654, 0.67351, 2.47555, 0, 0, 0, 0, 0, 0, 2.34296, 0.585454, 2.45517, 0, 0, 0, 0, 0, 0, 2.51066, 0.474226, 2.43907, 0, 0, 0, 0, 0, 0, 2.82094, 0.358365, 2.39864, 0, 0, 0, 0, 0, 0, 3.09268, 0.330558, 2.35451, 0, 0, 0, 0, 0, 0, 4.04916, 0.176358, 2.20585),
"tilts": PackedFloat32Array(-0.0186419, -0.753989, 0, 0, 0, 0.785076, 0, -1.57014, -1.69518, -2.28232, -1.9324, -1.74667, -2.10253, 0, -1.37183, -1.48546, 0.795124, 0, 0, 0, 0, 1.2551, -0.922223, 0, -0.951673, -0.979968, 0)
}
point_count = 27

[node name="Light_Controller" type="Node3D"]
script = ExtResource("1_ngekc")

[node name="Path3D_Red_Light" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.17112, -0.172449, 2.40964)
curve = SubResource("Curve3D_8ama4")

[node name="PathFollow3D_Red" type="PathFollow3D" parent="Path3D_Red_Light"]
transform = Transform3D(0.0736266, 0.699791, 0.710515, -2.98019e-08, 0.712431, -0.701712, -0.997271, 0.0516642, 0.052456, -1.70734, 0.211664, -0.00928807)

[node name="Path3D_Blue_Light" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000390053, -0.0194168, 0.00222874)
curve = SubResource("Curve3D_bovt8")

[node name="PathFollow3D_Blue" type="PathFollow3D" parent="Path3D_Blue_Light"]
transform = Transform3D(0.272942, -0.683146, -0.677354, 0.0131754, 0.706677, -0.70741, 0.961939, 0.184158, 0.201883, 4.04916, 0.176358, 2.20585)
